[project]
name = "sp24-cs498e2e-mp02-ksidana2"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Khushi Sidana", email = "sidana.khushi@gmail.com" }
]
dependencies = [
    "numpy>=1.24.4",
    "scikit-learn>=1.3.2",
    "matplotlib>=3.7.5",
    "quarto>=0.1.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.1.1",
    "quartodoc>=0.7.2",
    "quarto>=0.1.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mluno"]
